# rteipc

./: AUTHORS  CMakeLists.txt  LICENSE  README.md  rteipc.pc.in
.circleci/: config.yml
demo/: CMakeLists.txt  README  broadcast.c  hello.c  relay.c  sample_i2c.c  sample_spi.c  sample_sysfs.c  sample_tty.c  switch.c
docker/: Dockerfile
src/: CMakeLists.txt  base.c  connect.c  ep.c  ep.h  ep_core.c  list.c  list.h  message.c  message.h  rteipc.h  switch.c  table.c  table.h
src/ep/: ep_gpio.c  ep_i2c.c  ep_ipc.c  ep_loop.c  ep_spi.c  ep_sysfs.c  ep_tty.c
src/rtemgr/: CMakeLists.txt  librtemgr.c  rtemgr-common.h  rtemgr.c  rtemgr.pc.in  rtemgrcli.h  rtemgrd.c
